# video_streamer

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.md
cmake/: FindEasyLoggingPP.cmake
src/: jpeg_frame.cpp  jpeg_frame.h  unique_fd.h  v4l2_device.cpp  v4l2_device.h  video_streamer.cpp  video_streamer.h  video_streamer_main.cpp
